--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "parcel-project-template",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://nzend.github.io/team-project-cinemania",
+  "homepage": "https://GoitStudentsWorks.github.io/js_fs_74_nzend",
   "scripts": {
     "start": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /team-project-cinemania/"
+    "build": "parcel build src/*.html --public-url /js_fs_74_nzend/"
   },
   "repository": {
     "type": "git",
